--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -1,6 +1,18 @@
 {% extends "crafters/base.html" %}
 {% load short_codes static thumbnail %}
-{% block full_title %}{% endblock %}
+
+{% block meta_head %}
+<meta name="keywords" content="Hurricane Harvey, Relief, Community, Houston">
+<meta property="og:title" content="Crafters for Good at TXRX Labs">
+<meta property="og:image" content="https://txrxlabs.org/static/crafters/bench.jpg">
+<meta property="og:description" content="As a further way to help Houstonians we will be holding workshops at TXRX Labs to help people understand the work that will need to be done to their homes to repair and also the costs associated." />
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@txrxlabs" />
+<meta name="twitter:title" content="Crafters For Good" />
+<meta name="twitter:description" content="As a further way to help Houstonians we will be holding workshops at TXRX Labs to help people understand the work that will need to be done to their homes to repair and also the costs associated." />
+<meta name="twitter:image" content="https://txrxlabs.org/static/crafters/bench.jpg" />
+{% endblock %}
 
 {% block main-inner %}
 <div class="half-flexy">
