more crafters for good meta

--- a/main/templates/crafters/base.html
+++ b/main/templates/crafters/base.html
@@ -4,6 +4,19 @@
 {% block full_title %}Crafters For Good at TXRX Labs{% endblock %}
 {% block header %}{% endblock %}
 
+{% block meta_head %}
+<meta name="keywords" content="Hurricane Harvey, Relief, Community, Houston">
+<meta property="og:title" content="{{ META.title }}">
+<meta property="og:image" content="{{ META.image }}" />
+<meta property="og:description" content="The Crafters for Good initiative by TXRX Labs serves to assist Houstonians affected by Harvey and assemble those who are looking for a way to contribute by offering hands on and educational workshops. The makeathons will create furniture for those in need and the seminars will provide the information necessary in the rebuilding process. "/>
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@txrxlabs" />
+<meta name="twitter:title" content="{{ META.title }}" />
+<meta name="twitter:description" content="The Crafters for Good initiative by TXRX Labs serves to assist Houstonians affected by Harvey and assemble those who are looking for a way to contribute by offering hands on and educational workshops. The makeathons will create furniture for those in need and the seminars will provide the information necessary in the rebuilding process. "/>
+<meta name="twitter:image" content="https://txrxlabs.org/media/cache/16/18/1618ce2bd75748d11f1a063930d0d945.jpg" />
+{% endblock %}
+
 {% block head_styles %}
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800" rel="stylesheet">
 {% compress css %}
