--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -27,7 +27,7 @@
       </ul>
       -->
 
-      <b class="lead">Numbers and links to know</b>
+      <b class="lead">Numbers and Resources</b>
       <ul>
         <li>FEMA Disaster Fraud Hotline: <a href="tel:1-866-720-5721">1-866-720-5721</a></li>
         <li>Texas Attorney General (for reporting fraud): <a href="1-800-252-8011">1-800-252-8011</a></li>
@@ -35,8 +35,15 @@
         <li><a href="https://www.bbb.org/houston/">Houston Better Business Bureau</a></li>
         <li><a href="https://www.angieslist.com/companylist/houston/contractor.htm">Angie&rsquo;s List contractors</a></li>
         <li><a href="https://www.fema.gov/hurricane-harvey-rumor-control">Hurricane Harvey rumor control</a></li>
-        <li><a href="https://docs.google.com/document/d/1HEBcT5V2TCk3eyz25OLidQXKcPXgPydGHhWUZHez2RQ/edit?usp=sharing">Flood Damage Cleanup Tips</a></li>
-      </ul>
+        <li><a href="https://docs.google.com/document/d/1f3aI_USzoiBMB43ERKvdkif7nR5nyRrPbjzxcMZUQws/edit?usp=sharing">Flood Damage Cleanup Tips</a></li>
+        <li><a href="https://docs.google.com/document/d/1DB7qeLEXIPwuNhvYN0HBh87jgMpz5TTV-qpMpuWdVA0/edit?usp=sharing">
+            Flood Cleanup Cirriculum</a></li>
+        <li><a href="https://drive.google.com/file/d/0BwBXk4vJz3BzRGJSeno3eFZCQTNaMHU4c1R0QXo5LTNMdDY0/view?usp=sharing">
+            Seminar Flyer (black and white)</a></li>
+        <li><a href="https://drive.google.com/file/d/0BwBXk4vJz3BzZkYwUDVVYi1JYmsyLVo3NWlJc0R6RXJKYnFz/view?usp=sharing">
+            Seminar Flyer (color)</a></li>
+        <li><a href="https://drive.google.com/file/d/0BwBXk4vJz3BzZGRTeXVmQWN4RVE/view?usp=sharing">
+            DOCUMENTACI&Oacute;N FOTOGR&Aacute;FICA POR INUNDACI&Oacute;N</a></li>
     </div>
   </div>
 
