more schedule changes

--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -47,17 +47,10 @@
     </div>
   </div>
 
-  <h2><center>Seminar Schedule</center></h2>
+  <h2><center>Harvey Relief Seminar</center></h2>
   <p class="note">
     These one hour workshops will cover how to navigate the process of getting your house clean,
     dealing with insurance companies and FEMA, and dealing with contractors and some resources for DIY remodelers.
-  </p>
-  <p class="note">
-    <b>Location:</b>
-    <a href="https://maps.google.com/?q=TXRX Labs, Houston, TX"><br/>
-      <img width="200" src="/static/crafters/logo.png" /><br/>
-      <u>205 Roberts St.<br/> Houston TX, 77003</u>
-    </a>
   </p>
   <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
     <tr>
@@ -78,33 +71,29 @@
       <th>11am-12pm</th>
       <td>Harvey Relief Seminar</td>
     </tr>
-    <tr>
-      <th>1pm-2pm</th>
-      <td>Harvey Relief Seminar</td>
-    </tr>
-    <tr>
-      <th>3pm-4pm</th>
-      <td>Harvey Relief Seminar</td>
-    </tr>
   </table>
-  <table class="table table-striped" style="max-width: 500px; margin: 0 auto;">
+
+  <h2><center>DIY Sheetrock and Trim Carpentry</center></h2>
+  <p class="note">This seminar will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
+  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
     <tr>
       <th></th>
-      <th>September 17, 2017</th>
+      <th>Sunday September 24</th>
     </tr>
     <tr>
-      <th>11am-12pm</th>
-      <td>Harvey Relief Seminar</td>
-    </tr>
-    <tr>
-      <th>1pm-2pm</th>
-      <td>Harvey Relief Seminar</td>
-    </tr>
-    <tr>
-      <th>3pm-4pm</th>
-      <td>Harvey Relief Seminar</td>
+      <th>10:30am-1:30pm</th>
+      <td>DIY Sheetrock and Trim Carpentry</td>
     </tr>
   </table>
+
+  <p class="note">
+    <b>Location:</b>
+    <a href="https://maps.google.com/?q=TXRX Labs, Houston, TX"><br/>
+      <img width="200" src="/static/crafters/logo.png" /><br/>
+      <u>205 Roberts St.<br/> Houston TX, 77003</u>
+    </a>
+  </p>
+
   <div class="big-button">
     <a class="btn btn-primary" href="https://airtable.com/shrOWgN7Y1G6IqZuH">Register Here</a>
     <div class="note"> Note: Space is very limited and signing up does not guarentee enrollment. You will be sent a confirmation letter by email if your registration is approved.</div>
