--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -72,6 +72,36 @@
       <td>Harvey Relief Seminar</td>
     </tr>
   </table>
+  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
+    <tr>
+      <th></th>
+      <th>Monday September 18</th>
+    </tr>
+    <tr>
+      <th>10am-11am</th>
+      <td>Harvey Relief Seminar</td>
+    </tr>
+  </table>
+  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
+    <tr>
+      <th></th>
+      <th>Friday September 22</th>
+    </tr>
+    <tr>
+      <th>7pm-8pm</th>
+      <td>Harvey Relief Seminar</td>
+    </tr>
+  </table>
+  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
+    <tr>
+      <th></th>
+      <th>Saturday September 23</th>
+    </tr>
+    <tr>
+      <th>1pm-2pm</th>
+      <td>Harvey Relief Seminar</td>
+    </tr>
+  </table>
 
   <h2><center>DIY Sheetrock and Trim Carpentry</center></h2>
   <p class="note">This seminar will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
