more crafters tweaks

--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -326,3 +326,11 @@ money-widget .btn-group > .btn {
   background: @orange;
   color: white;
 }
+
+.white-bg .listed {
+  font-weight: normal;
+  list-style: square;
+  max-width: 400px;
+  text-align: left;
+  li { margin-bottom: 0.5em; }
+}
