--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -49,62 +49,19 @@
 
   <h2><center>Harvey Relief Seminar</center></h2>
   <p class="note">
-    These one hour workshops will cover how to navigate the process of getting your house clean,
+    These one hour seminars will cover how to navigate the process of getting your house clean,
     dealing with insurance companies and FEMA, and dealing with contractors and some resources for DIY remodelers.
   </p>
-  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
-    <tr>
-      <th></th>
-      <th>Friday September 15</th>
-    </tr>
-    <tr>
-      <th>7pm-8pm</th>
-      <td>Harvey Relief Seminar</td>
-    </tr>
-  </table>
-  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
-    <tr>
-      <th></th>
-      <th>Saturday September 16</th>
-    </tr>
-    <tr>
-      <th>11am-12pm</th>
-      <td>Harvey Relief Seminar</td>
-    </tr>
-  </table>
-  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
-    <tr>
-      <th></th>
-      <th>Monday September 18</th>
-    </tr>
-    <tr>
-      <th>10am-11am</th>
-      <td>Harvey Relief Seminar</td>
-    </tr>
-  </table>
-  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
-    <tr>
-      <th></th>
-      <th>Friday September 22</th>
-    </tr>
-    <tr>
-      <th>7pm-8pm</th>
-      <td>Harvey Relief Seminar</td>
-    </tr>
-  </table>
-  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
-    <tr>
-      <th></th>
-      <th>Saturday September 23</th>
-    </tr>
-    <tr>
-      <th>1pm-2pm</th>
-      <td>Harvey Relief Seminar</td>
-    </tr>
-  </table>
+  <ul class="note listed">
+    <li>Friday September 15, 7pm-8pm</li>
+    <li>Saturday September 16, 11am-12pm</li>
+    <li>Monday September 18, 10am-11am</li>
+    <li>Friday September 22, 7pm-8pm</li>
+    <li>Saturday September 23, 1pm-2pm</li>
+  </ul>
 
   <h2><center>DIY Sheetrock and Trim Carpentry</center></h2>
-  <p class="note">This seminar will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
+  <p class="note">This workshop will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
   <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
     <tr>
       <th></th>
