--- a/main/templates/crafters/index.html
+++ b/main/templates/crafters/index.html
@@ -5,7 +5,7 @@
 <div class="row" style="color: white;">
   <div class="col-sm-12 description">
     <p>
-      TXRX Labs&rsquo; most important asset is its community. We&rsquo;d like to reach out to and put our resources to use in this time of great need. The Crafters for Good initiative was launched in order to both serve Houstonians affected and assemble those who are looking for a way to contribute.
+      Makers can make all the difference. TXRX Labs&rsquo; most important asset is its community. We&rsquo;d like to reach out to and put our resources to use in this time of great need. The Crafters for Good initiative was launched in order to both serve Houstonians affected and assemble those who are looking for a way to contribute.
     </p>
     <p>
       Our current programs are the Harvey Relief Makeathons and the Harvey Relief Seminars. The Makethons will invite volunteers from the community to help by creating basic funiture needs for those starting over. Our Seminars will help our citizens get the information they need to work through the process of rebuilding.
