--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -62,16 +62,9 @@
 
   <h2><center>DIY Sheetrock and Trim Carpentry</center></h2>
   <p class="note">This workshop will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
-  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
-    <tr>
-      <th></th>
-      <th>Sunday September 24</th>
-    </tr>
-    <tr>
-      <th>10:30am-1:30pm</th>
-      <td>DIY Sheetrock and Trim Carpentry</td>
-    </tr>
-  </table>
+  <ul class="note listed">
+    <li>Sunday September 24, 10:30 am - 1:30 pm</li>
+  </ul>
 
   <p class="note">
     <b>Location:</b>
