--- a/main/templates/crafters/base.html
+++ b/main/templates/crafters/base.html
@@ -65,7 +65,7 @@
           @txrxlabs or sign up for our email newsletter.
         </p>
         <div class="social">
-          <a class="btn btn-primary" href="http://eepurl.com/uhcT1">Subscribe</a>
+          <a class="btn btn-primary" href="http://eepurl.com/c4eHkL">Subscribe</a>
           <div>
             <a href="https://www.facebook.com/TxRxLabs"><i class="fa fa-facebook"></i></a>
             <a href="https://twitter.com/txrxlabs"><i class="fa fa-twitter"></i></a>
