--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -211,7 +211,7 @@ footer {
   background: #eee;
   font-weight: @fw-normal;
   font-size: 14px;
-  padding-top: 3rem;
+  padding: 3rem 1.5rem 0;
   margin-bottom: 30px;
   .airtable-embed {
     display: block;
@@ -235,9 +235,10 @@ footer {
 
 .half-flexy {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 -15px 3rem;
+  justify-content: space-around;
   .column {
-    width: 50%;
     flex-basis: 50%;
     padding: 15px;
     align-items: stretch;
@@ -249,10 +250,25 @@ footer {
     height: 100%;
   }
   @media (max-width: @screen-xs-max) {
-    display: block;
-    .column { width: 100% }
     .has-bg-right { display: none; }
+    .column { flex-basis: 100%;}
   }
+}
+
+.half-flexy .fixed-image {
+  text-align: center;
+  width: 200px;
+  flex-basis: 200px;
+  .img {
+    .fixed-ratio(130%);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-bottom: 1rem;
+    width: 100%;
+  }
+  b { display: block; }
+  a { text-decoration: underline; }
 }
 
 .pic-link {
@@ -333,4 +349,5 @@ money-widget .btn-group > .btn {
   max-width: 400px;
   text-align: left;
   li { margin-bottom: 0.5em; }
+  a { display: inline-block; } /* stops numbers from line-wrapping */
 }
