--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -264,6 +264,7 @@ footer {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.3);
     margin-bottom: 1rem;
     width: 100%;
   }
