--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -4,36 +4,42 @@
 {% block main-inner %}
 <div class="white-bg">
   <div class="half-flexy">
+    <h2>Course Documents</h2>
+    <div class="column fixed-image">
+      <a href="https://docs.google.com/document/d/1SNSig26asEb7QF5tgdQoedp5OqafxsqGw_3aiU5-MZo/edit?usp=sharing">
+        <div class="img" style="background-image: url({% static "crafters/flood_recovery.png" %})"></div>
+        <b>Harvey Quick Reference</b>
+      </a>
+    </div>
+    <div class="column fixed-image">
+      <a href="https://docs.google.com/document/d/1DB7qeLEXIPwuNhvYN0HBh87jgMpz5TTV-qpMpuWdVA0/edit?usp=sharing">
+        <div class="img" style="background-image: url({% static "crafters/harvey_seminar_curriculum.png" %})"></div>
+        <b>Detailed Harvey Recovery Guide</b>
+      </a>
+    </div>
+    <div class="column fixed-image">
+      <a href="https://drive.google.com/file/d/0BwBXk4vJz3BzZGRTeXVmQWN4RVE/view?usp=sharing">
+        <div class="img" style="background-image: url({% static "crafters/documentacion.png" %})"></div>
+        <b>DOCUMENTACI&Oacute;N FOTOGR&Aacute;FICA POR INUNDACI&Oacute;N</a>
+      </b>
+    </div>
+    <div class="column fixed-image">
+      <a href="https://docs.google.com/document/d/1f3aI_USzoiBMB43ERKvdkif7nR5nyRrPbjzxcMZUQws/edit?usp=sharing">
+        <div class="img" style="background-image: url({% static "crafters/documentacion.png" %})"></div>
+        <b>Flood Damage Cleanup Tips</b>
+      </a>
+    </div>
     <div class="column fixed-image">
       <div class="img" style="background-image: url({% static "crafters/flier_pdf.png" %}"></div>
       <b>Seminar Flier</b>
-      <br/>
       <a href="https://drive.google.com/file/d/0BwBXk4vJz3BzRGJSeno3eFZCQTNaMHU4c1R0QXo5LTNMdDY0/view?usp=sharing">
-        Black and White</a> |
+        Black and White</a>
       <a href="https://drive.google.com/file/d/0BwBXk4vJz3BzZkYwUDVVYi1JYmsyLVo3NWlJc0R6RXJKYnFz/view?usp=sharing">
         Color</a>
     </div>
-    <div class="column fixed-image">
-      <div class="img" style="background-image: url({% static "crafters/harvey_seminar_curriculum.png" %})"></div>
-      <br/>
-      <b><a href="https://docs.google.com/document/d/1DB7qeLEXIPwuNhvYN0HBh87jgMpz5TTV-qpMpuWdVA0/edit?usp=sharing">
-          Flood Cleanup Cirriculum</a></b>
-    </div>
-    <div class="column fixed-image">
-      <div class="img" style="background-image: url({% static "crafters/documentacion.png" %})"></div>
-      <br/>
-      <a href="https://drive.google.com/file/d/0BwBXk4vJz3BzZGRTeXVmQWN4RVE/view?usp=sharing">
-        <b>DOCUMENTACI&Oacute;N FOTOGR&Aacute;FICA POR INUNDACI&Oacute;N</a></b>
-    </div>
-    <div class="column fixed-image">
-      <div class="img" style="background-image: url({% static "crafters/documentacion.png" %})"></div>
-      <br/>
-      <a href="https://docs.google.com/document/d/1f3aI_USzoiBMB43ERKvdkif7nR5nyRrPbjzxcMZUQws/edit?usp=sharing">
-        <b>Flood Damage Cleanup Tips</b></a>
-    </div>
   </div>
   <!--
-      <b class="lead">These workshops will cover:</b>
+      <b class="lead">These workshops will cover</b>
       <ul>
         <li>Choosing a contractor - Discover how to find and compare contractors and services.</li>
         <li>Vetting a contractor - Get questions to ask a contractor in order to prtect yourself.</li>
@@ -41,38 +47,66 @@
         <li>Red Flags - Find out what to look for to spot deals that may be too good to be true.</li>
       </ul>
       -->
+  <div class="list">
+    <h2>Resources</h2>
+    <li><a href="http://www.HoustonRecovers.org">HoustonRecovers.org</a></li>
+    <li><a href="http://harrisrecovery.org">Harris County</a></li>
+    <li><a href="https://www.disasterassistance.gov/">FEMA</a></li>
+  </div>
+  <div class="list">
+    <h2>More FEMA Information</h2>
+    <li><a href="http://www.lonestarlegal.org/">Legal Assistance</a></li>
+    <li><a href="http://www.redcross.org/get-help/disaster-relief-and-recovery-services/find-an-open-shelter">
+        Shelters</a></li>
+  </div>
 
-  <h2><center>Numbers and Resources</center></h2>
-  <ul class="note listed">
-    <li>FEMA Disaster Fraud Hotline: <a href="tel:1-866-720-5721">1-866-720-5721</a></li>
-    <li>Texas Attorney General (for reporting fraud): <a href="1-800-252-8011">1-800-252-8011</a></li>
+  <div class="list">
+    <h2>Immediate Assistance</h2>
+    <li>Food, clothing, evacuation/transportation assistance, or other immediate assistance, please contact:</li>
+    <li><a href="tel:1-866-438-4636">1-866-438-4636</a> The American Red Cross: or call toll free</li>
+    <li><a href="tel:211">Call 211</a> United Way Hotline</li>
+  </div>
+
+  <div class="list">
+    <h2>Other Helpful Resources</h2>
+    <li><a href="https://apps.twc.state.tx.us/UBS/security/logon.do">Disaster Unemployment Assistance</a></li>
+    <li><a href="tel:713-308-8580">713-308-8580</a> Locate your towed car</li>
+    <li><a href="tel:1-866-901-3773">1-866-901-3773</a> Kidney Community Emergency Response coalition. Help find the nearest dialysis center</li>
+  </div>
+
+  <div class="list">
+    <h2>Report Fraud</h2>
+    <li><a href="tel:1-866-720-5721">1-866-720-5721</a> FEMA Disaster Fraud Hotline</li>
+    <li><a href="tel:1-800-252-8011">1-800-252-8011</a> Texas Attorney General</li>
     <li>File a fraud complaint with the FTC <a href="https://www.ftccomplaintassistant.gov/#crnt&panel1-1">here</a>.</li>
     <!--<li><a href="https://www.bbb.org/houston/">Houston Better Business Bureau</a></li>
         <li><a href="https://www.angieslist.com/companylist/houston/contractor.htm">Angie&rsquo;s List contractors</a></li>
     <li><a href="https://www.fema.gov/hurricane-harvey-rumor-control">Hurricane Harvey rumor control</a></li>-->
-  </ul>
+  </div>
+</div>
 
-  <h2><center>Harvey Relief Seminar</center></h2>
+<div class="white-bg" id="seminars">
+  <div class="list">
+    <h2>Harvey Relief Seminar</h2>
+    <p class="note">
+      These one hour seminars will cover how to navigate the process of getting your house clean,
+      dealing with insurance companies and FEMA, and dealing with contractors and some resources for DIY remodelers.
+    </p>
+      <li>Friday September 15, 7pm-8pm</li>
+      <li>Saturday September 16, 11am-12pm</li>
+      <li>Monday September 18, 10am-11am</li>
+      <li>Friday September 22, 7pm-8pm</li>
+      <li>Saturday September 23, 1pm-2pm</li>
+  </div>
+
+  <div class="list">
+    <h2>DIY Drywall and Trim Carpentry</h2>
+    <p class="note">This workshop will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
+      <li>Sunday September 24, 10:30 am - 1:30 pm</li>
+  </div>
+
   <p class="note">
-    These one hour seminars will cover how to navigate the process of getting your house clean,
-    dealing with insurance companies and FEMA, and dealing with contractors and some resources for DIY remodelers.
-  </p>
-  <ul class="note listed">
-    <li>Friday September 15, 7pm-8pm</li>
-    <li>Saturday September 16, 11am-12pm</li>
-    <li>Monday September 18, 10am-11am</li>
-    <li>Friday September 22, 7pm-8pm</li>
-    <li>Saturday September 23, 1pm-2pm</li>
-  </ul>
-
-  <h2><center>DIY Drywall and Trim Carpentry</center></h2>
-  <p class="note">This workshop will cover how to remove and replace drywall and insulation and how to finish drywall. How to  do  finish carpentry  like  trim  and molding will also be reviewed. Participants will learn tips on measuring and marking which is a necessary first step for this kind of task.</p>
-  <ul class="note listed">
-    <li>Sunday September 24, 10:30 am - 1:30 pm</li>
-  </ul>
-
-  <p class="note">
-    <b>Location:</b>
+    <b>Location</b>
     <a href="https://maps.google.com/?q=TXRX Labs, Houston, TX"><br/>
       <img width="200" src="/static/crafters/logo.png" /><br/>
       <u>205 Roberts St.<br/> Houston TX, 77003</u>
@@ -115,7 +149,7 @@
       {% thumbnail "https://txrxlabs.org/static/crafters/ronnie.jpg" "455x290" crop="center" as im %}
       <img src="{{ im.url }}"/>
       {% endthumbnail %}
-      <p>This is our shop tech, Ronnie</p>
+      <p>Seminars created by TXRX Volunteer Coordinator Ronnie DeVries</p>
     </div>
   </div>
 </div>
